RESOLVED FIXED269713
[WGSL] shader,validation,expression,access,vector:vector:* is failing
https://bugs.webkit.org/show_bug.cgi?id=269713
Summary [WGSL] shader,validation,expression,access,vector:vector:* is failing
Tadeu Zagallo
Reported 2024-02-19 08:13:18 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-19 08:13:30 PST
Tadeu Zagallo
Comment 2 2024-02-19 08:16:03 PST
EWS
Comment 3 2024-02-20 06:10:31 PST
Committed 275039@main (a4712acfe708): <https://commits.webkit.org/275039@main> Reviewed commits have been landed. Closing PR #24748 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.