[WGSL] shader,validation,expression,access,vector:vector:* is failing https://bugs.webkit.org/show_bug.cgi?id=269713 rdar://123239541

Reviewed by Mike Wyrzykowski.

We were missing the out of bounds validation when only the index of an access is
constant, but not the base. If the type determines the size of the array/vector/matrix
it should still be a compilation error.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/275039@main